--- a/_general.scss
+++ b/_general.scss
@@ -163,6 +163,21 @@ footer {
   }
 }
 
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+  img {
+    width: 100%;
+    display: block;
+  }
+}
+
 @media screen and (max-width: 415px) {
   header {
     width: 100%;
@@ -180,6 +195,11 @@ footer {
         img.logo {
           width: 100%;
           height: 100px;
+          transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+          &.slideup {
+            height: 0;
+          }
         }
       }
 
@@ -313,6 +333,10 @@ footer {
         }
       }
     }
+  }
+
+  .scroll-to-top {
+    opacity: 0.85;
   }
 }
 
