--- a/contact.css
+++ b/contact.css
@@ -137,6 +137,21 @@ footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
 }
 
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+}
+.scroll-to-top img {
+  width: 100%;
+  display: block;
+}
+
 @media screen and (max-width: 415px) {
   header {
     width: 100%;
@@ -156,6 +171,10 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo a img.logo {
     width: 100%;
     height: 100px;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  header section.logo a img.logo.slideup {
+    height: 0;
   }
   header section.logo .top {
     display: flex;
@@ -262,6 +281,9 @@ footer .footer-content .mail .social-logo .logo {
     display: flex;
     justify-content: center;
   }
+  .scroll-to-top {
+    opacity: 0.85;
+  }
 }
 .cross span:nth-child(1) {
   top: 18px !important;
@@ -313,12 +335,13 @@ section.QA .QA-item .question .symbol {
   width: 30px;
   height: 30px;
   margin-left: auto;
+  flex-shrink: 0;
 }
 section.QA .QA-item .question .symbol span {
   position: absolute;
   width: 60%;
   height: 4px;
-  background-color: rgb(58, 58, 58);
+  background-color: rgb(255, 151, 9);
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 section.QA .QA-item .question .symbol span:nth-child(1) {
