--- a/item.css
+++ b/item.css
@@ -136,6 +136,21 @@ footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
 }
 
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+}
+.scroll-to-top img {
+  width: 100%;
+  display: block;
+}
+
 @media screen and (max-width: 415px) {
   header {
     width: 100%;
@@ -155,6 +170,10 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo a img.logo {
     width: 100%;
     height: 100px;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  header section.logo a img.logo.slideup {
+    height: 0;
   }
   header section.logo .top {
     display: flex;
@@ -260,6 +279,9 @@ footer .footer-content .mail .social-logo .logo {
   footer .footer-content .mail .social-logo {
     display: flex;
     justify-content: center;
+  }
+  .scroll-to-top {
+    opacity: 0.85;
   }
 }
 .cross span:nth-child(1) {
