--- a/products.css
+++ b/products.css
@@ -136,6 +136,21 @@ footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
 }
 
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+}
+.scroll-to-top img {
+  width: 100%;
+  display: block;
+}
+
 @media screen and (max-width: 415px) {
   header {
     width: 100%;
@@ -155,6 +170,10 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo a img.logo {
     width: 100%;
     height: 100px;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  header section.logo a img.logo.slideup {
+    height: 0;
   }
   header section.logo .top {
     display: flex;
@@ -260,6 +279,9 @@ footer .footer-content .mail .social-logo .logo {
   footer .footer-content .mail .social-logo {
     display: flex;
     justify-content: center;
+  }
+  .scroll-to-top {
+    opacity: 0.85;
   }
 }
 .cross span:nth-child(1) {
@@ -381,7 +403,7 @@ section.all-product .product .cards .card .price button {
 section.all-product .product .cards .card:hover {
   background-color: rgb(255, 236, 197);
   transform: scale(1.05);
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.356);
+  box-shadow: 6px 6px 5px rgba(0, 0, 0, 0.356);
 }
 section.all-product .product .page {
   margin: 2rem auto;
@@ -445,6 +467,8 @@ section.all-product .product .page .page-next a {
   section.all-product .list {
     display: none;
     width: 100%;
+    opacity: 0;
+    transition: opacity linear 0.25s;
   }
   section.all-product .list ul {
     background-color: rgb(140, 132, 126);
@@ -463,6 +487,15 @@ section.all-product .product .page .page-next a {
   section.all-product .list ul li a {
     color: white;
     text-decoration: none;
+  }
+  section.all-product .list.rwd-list {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    z-index: 21;
+    opacity: 1;
   }
   section.all-product .product {
     width: 100%;
@@ -517,14 +550,5 @@ section.all-product .product .page .page-next a {
     font-size: 1.1rem;
     border: none;
     border-radius: 5px;
-  }
-  .rwd-list {
-    display: block !important;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0px;
-    z-index: 21;
   }
 }/*# sourceMappingURL=products.css.map */
