--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header section.logo .top .search {
 }
 header section.logo .top .search img {
   height: 5vh;
+  cursor: pointer;
   vertical-align: bottom;
 }
 header section.logo .top .search input {
@@ -317,10 +318,10 @@ section.product .product-top a {
   color: white;
   background-color: rgb(255, 151, 9);
   border-radius: 10px;
+  transition: all 0.3s ease;
 }
 section.product .product-top a:hover {
   transform: scale(1.2);
-  transition: all 0.3s ease;
 }
 section.product .dash {
   margin: 1rem 0;
@@ -369,7 +370,7 @@ section.product .cards .card .price button {
 section.product .cards .card:hover {
   background-color: rgb(255, 236, 197);
   transform: scale(1.05);
-  box-shadow: 15px 15px 5px rgba(0, 0, 0, 0.356);
+  box-shadow: 12px 12px 5px rgba(0, 0, 0, 0.356);
 }
 
 footer {
@@ -415,6 +416,21 @@ footer .footer-content .mail .social-logo {
 }
 footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
+}
+
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+}
+.scroll-to-top img {
+  width: 100%;
+  display: block;
 }
 
 .swiper-button-next,
@@ -494,6 +510,10 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo a img.logo {
     width: 100%;
     height: 100px;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  header section.logo a img.logo.slideup {
+    height: 0;
   }
   header section.logo .top {
     display: flex;
@@ -550,6 +570,12 @@ footer .footer-content .mail .social-logo .logo {
     width: 200px;
     height: 45px;
     margin: 0.2rem auto;
+  }
+  header section.logo .top .rwd-search input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
+  header section.logo .top .rwd-search input::placeholder {
+    font-size: 1.2rem;
   }
   header section.logo .top .rwd-search.open {
     height: 55px;
@@ -754,6 +780,9 @@ footer .footer-content .mail .social-logo .logo {
   footer .footer-content .mail .social-logo {
     display: flex;
     justify-content: center;
+  }
+  .scroll-to-top {
+    opacity: 0.85;
   }
   .film button,
   .film2 button,
