--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,7 @@ header {
 
         img {
           height: 5vh;
-
+          cursor: pointer;
           vertical-align: bottom;
         }
         input {
@@ -49,9 +49,6 @@ header {
 
           height: 5vh;
 
-          // &::placeholder {
-          //   font-size: 1.3rem;
-          // }
           &:focus {
             outline-color: $themeColor;
           }
@@ -370,9 +367,10 @@ section.product {
       color: white;
       background-color: $themeColor;
       border-radius: 10px;
+      transition: all 0.3s ease;
+
       &:hover {
         transform: scale(1.2);
-        transition: all 0.3s ease;
       }
     }
   }
@@ -429,7 +427,7 @@ section.product {
       &:hover {
         background-color: rgb(255, 236, 197);
         transform: scale(1.05);
-        box-shadow: 15px 15px 5px rgba(0, 0, 0, 0.356);
+        box-shadow: 12px 12px 5px rgba(0, 0, 0, 0.356);
       }
     }
   }
@@ -486,6 +484,21 @@ footer {
         }
       }
     }
+  }
+}
+
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+  img {
+    width: 100%;
+    display: block;
   }
 }
 
@@ -558,6 +571,11 @@ footer {
         img.logo {
           width: 100%;
           height: 100px;
+          transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+          &.slideup {
+            height: 0;
+          }
         }
       }
 
@@ -621,6 +639,9 @@ footer {
             width: 200px;
             height: 45px;
             margin: 0.2rem auto;
+            &::placeholder {
+              font-size: 1.2rem;
+            }
           }
 
           &.open {
@@ -921,6 +942,10 @@ footer {
         }
       }
     }
+  }
+
+  .scroll-to-top {
+    opacity: 0.85;
   }
 
   .film,
