--- a/style.scss
+++ b/style.scss
@@ -671,6 +671,7 @@ footer {
               padding: 1.2rem;
               border-bottom: 1px solid $themeColor;
               a {
+                display: block;
                 color: $secondColor;
                 font-size: 1.5rem;
                 text-decoration: none;
