--- a/style.css
+++ b/style.css
@@ -601,6 +601,7 @@ footer .footer-content .mail .social-logo .logo {
     border-bottom: 1px solid rgb(255, 151, 9);
   }
   header section.logo .top .rwd-nav ul li a {
+    display: block;
     color: rgb(58, 58, 58);
     font-size: 1.5rem;
     text-decoration: none;
