--- a/news.css
+++ b/news.css
@@ -166,6 +166,7 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo a {
     display: inline-block;
     margin: auto;
+    padding-bottom: 0.1rem;
   }
   header section.logo a img.logo {
     width: 100%;
@@ -178,7 +179,6 @@ footer .footer-content .mail .social-logo .logo {
   header section.logo .top {
     display: flex;
     width: 100%;
-    margin-top: 0.3rem;
     justify-content: space-around;
     padding: 0.5rem 0;
     border-top: 3px solid rgb(255, 151, 9);
@@ -229,6 +229,12 @@ footer .footer-content .mail .social-logo .logo {
     width: 200px;
     height: 45px;
     margin: 0.2rem auto;
+  }
+  header section.logo .top .rwd-search input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
+  header section.logo .top .rwd-search input::placeholder {
+    font-size: 1.2rem;
   }
   header section.logo .top .rwd-search.open {
     height: 55px;
@@ -446,13 +452,13 @@ section.news .news-item:nth-child(even) {
     width: 100%;
   }
   .page .page-first {
-    margin: 0 0.5rem;
+    margin: 0 0.25rem;
   }
   .page .page-other {
-    margin: 0 0.5rem;
+    margin: 0 0.25rem;
   }
   .page .page-next {
     width: 70px;
-    margin: 0 0.5rem;
+    margin: 0 0.25rem;
   }
 }/*# sourceMappingURL=news.css.map */
