--- a/products.scss
+++ b/products.scss
@@ -197,12 +197,12 @@ section.all-product {
         overflow: hidden;
         text-align: center;
         position: absolute;
-        top: 100px;
+        top: 85px;
         left: 60px;
         transition: all 0.3s ease-in-out;
         li {
           list-style-type: none;
-          padding: 0.5rem 0;
+          padding: 0.3rem 0;
           border-bottom: 3px solid rgba(58, 58, 58, 0.5);
           a {
             color: white;
@@ -220,7 +220,7 @@ section.all-product {
         z-index: 21;
         opacity: 1;
         ul {
-          height: 625px;
+          height: 528px;
         }
       }
     }
@@ -257,26 +257,28 @@ section.all-product {
       }
 
       .page {
-        // margin: 2rem auto;
+        margin: 1rem auto;
         // display: flex;
         // justify-content: center;
         // background-color: $listColor;
         .page-first {
           // background-color: $themeColor;
-          width: 48px;
+          width: 40px;
           height: 48px;
           // display: flex;
           // justify-content: center;
           // align-items: center;
-          margin: 0 0.2rem;
+          margin: 0 0.15rem;
         }
         .page-other {
-          margin: 0 0.2rem;
+          width: 40px;
+
+          margin: 0 0.15rem;
         }
 
         .page-next {
           width: 55px;
-          margin: 0 0.2rem;
+          margin: 0 0.15rem;
         }
       }
     }
