--- a/style.scss
+++ b/style.scss
@@ -204,6 +204,7 @@ section.news {
         margin: auto;
         padding: 0.9rem 0;
         a {
+          display: block;
           font-size: 2rem;
           text-decoration: none;
           color: $secondColor;
@@ -530,27 +531,16 @@ footer {
   left: 0;
   z-index: 21;
 
-  button {
-    width: 44px;
-    height: 44px;
-    line-height: 44px;
-    cursor: pointer;
-    position: absolute;
-    top: 300px;
-    right: 400px;
-    border-radius: 50%;
-    color: white;
-    background-color: rgb(164, 159, 154);
-    border: none;
-    font-size: 2rem;
-  }
-
   iframe {
     width: 853px;
     height: 480px;
     position: absolute;
     top: 300px;
     left: 533px;
+  }
+
+  &.open {
+    display: block;
   }
 }
 
@@ -568,6 +558,7 @@ footer {
       a {
         display: inline-block;
         margin: auto;
+        padding-bottom: 0.1rem;
         img.logo {
           width: 100%;
           height: 100px;
@@ -583,7 +574,7 @@ footer {
         display: flex;
         width: 100%;
         justify-content: space-around;
-        margin-top: 0.1rem;
+
         padding: 0.5rem 0;
         border-top: 3px solid $themeColor;
         border-bottom: 3px solid $themeColor;
@@ -701,8 +692,8 @@ footer {
 
   section.news {
     width: 100%;
-    padding: 0;
-    margin-top: 1.5rem;
+
+    margin: 1.5rem 0.1rem 0 0.1rem;
     .md-news-title {
       display: flex;
       justify-content: space-between;
@@ -954,11 +945,6 @@ footer {
   .film3,
   .film4,
   .film5 {
-    button {
-      top: 30%;
-      right: 0px;
-    }
-
     iframe {
       width: 100%;
       height: 233px;
