--- a/style.css
+++ b/style.css
@@ -780,10 +780,10 @@ footer .footer-content .mail .social-logo .logo {
   .film4 iframe,
   .film5 iframe {
     width: 100%;
-    height: 233px;
-    top: 35%;
-    left: 0;
-    right: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 .cross span:nth-child(1) {
